<resources>
    <string name="app_name">市集兒</string>

    <string name="image_source">請選擇圖片來源</string>
    <string name="camera">相機</string>
    <string name="gallery">相簿</string>
    <string name="confirm">確定</string>
    <string name="next">下一步</string>
    <string name="add">新增</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="price">$ %1$s</string>
    <string name="add_price">+$ %1$s</string>
    <string name="total_sold_price">總收益</string>
    <string name="delete_msg">是否要將資料刪除？</string>
    <string name="sold_item_hint">請輸入售出商品品名或價格</string>
    <string name="data_copied">已複製市集資料</string>
    <string name="joined_markets">市集列表</string>
    <string name="sold_items">售出商品</string>
    <string name="manage_market">管理市集</string>
    <string name="manage_item">管理商品</string>
    <string name="add_item">新增商品</string>
    <string name="edit_item">修改商品</string>
    <string name="add_market">新增市集</string>
    <string name="market_name">市集名稱</string>
    <string name="market_price">攤位費用</string>
    <string name="market_price_hint">請輸入攤位費用</string>
    <string name="market_location">市集地點</string>
    <string name="market_date">市集日期</string>
    <string name="item_name">商品名稱</string>
    <string name="item_price">商品價格</string>
    <string name="joined_market">已報名 %1$d 個市集</string>
    <string name="total_market_income">市集收益 %1$d</string>
    <string name="wrong_format">資料格式錯誤</string>
    <string name="column_empty">請輸入所有欄位</string>
    <string name="no_market">尚未報名任何市集</string>
    <string name="start_time">開始時間</string>
    <string name="end_time">結束時間</string>
    <string name="back_warning">是否回到上一頁？目前頁面的資料尚未儲存</string>
    <string name="no_market_warning">未加入任何日期，是否取消編輯並回到首頁？</string>
    <string name="permission_denied">請到設定中開啟app所需的權限</string>
    <string name="default_start_time">12 : 00</string>
    <string name="default_end_time">18 : 30</string>
    <string name="market_time">%1$s : %2$s</string>
    <string name="modify_data">修改資料</string>
    <string name="add_customer">新增訂單</string>
    <string name="receipt">交易明細</string>
    <string name="customer_no">訂單 %1$d</string>
    <string name="memo_hint">輸入備註</string>
    <string name="memo">備註</string>
    <string name="discount_title">輸入折扣</string>
    <string name="customer_list">訂單列表</string>
    <string name="sold_number">數量</string>
    <string name="sub_total">小計</string>
    <string name="discount">折扣</string>
    <string name="total_price">總金額</string>
    <string name="edit_customer">編輯訂單</string>
    <string name="delete_customer">刪除訂單</string>
    <string name="customer_divider">----------------------</string>
    <string name="detail_divider_head">========明細========</string>
    <string name="detail_divider_end">====================</string>
    <string name="add_sold_item">售出商品</string>
    <string name="title">標題</string>
    <string name="added_category">新增分類</string>
    <string name="added_option">新增選項</string>
    <string name="default_add_price">+ $0</string>
    <string name="add_options">新增分類</string>
    <string name="item_exist">商品已存在</string>
    <string name="add_item_failed">新增資料失敗</string>
    <string name="save_image_failed">儲存圖片時發生錯誤</string>
    <string name="item_saved">品項已儲存</string>
    <string name="item_updated">品項已更新</string>
    <string name="item_not_found">找不到此商品，點擊新增</string>
    <string name="total_income_hint">總收益 = 攤位收入 - 攤位費</string>
    <string name="no_customers_hint">尚未成立訂單，加油！！</string>
    <string name="no_items_hint">尚未加入任何商品</string>
</resources>