<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:background="@drawable/round_bg_main_gradient"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_bg_white"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/market_icon_size"
                android:layout_height="@dimen/market_icon_size"
                android:background="@drawable/icon_back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="49dp"
            android:ellipsize="end"
            android:gravity="center"
            android:letterSpacing="0.4"
            android:maxLines="1"
            android:text="@string/add_market"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ll_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_back"
            app:layout_constraintTop_toTopOf="@id/ll_back" />

        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/market_name"
                android:textColor="@color/main_text_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="@drawable/round_bg_white"
                android:drawableStart="@drawable/icon_sub_market"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_name">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/market_location"
                android:textColor="@color/main_text_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="@drawable/round_bg_white"
                android:drawableStart="@drawable/icon_sub_location"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_location">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/market_price"
                android:textColor="@color/main_text_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_fee"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="@drawable/round_bg_white"
                android:drawableStart="@drawable/icon_sub_money"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_price">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/market_date"
                android:textColor="@color/main_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="2021-02-14"
                android:textColor="@color/main_text_color" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_top" />

</androidx.constraintlayout.widget.ConstraintLayout>
