<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@android:color/white">

        <View
            android:id="@+id/v_bg"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/round_bg_set_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/v_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_bg"
            tools:text="2020-01-31" />

        <TextView
            android:id="@+id/tv_start_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/icon_time_on"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/start_time"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_bg" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_start_title"
            app:layout_constraintStart_toEndOf="@id/tv_start_title"
            app:layout_constraintTop_toTopOf="@id/tv_start_title"
            tools:text="10:20" />

        <TextView
            android:id="@+id/tv_end_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/icon_time_off"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/end_time"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_start_title" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_end_title"
            app:layout_constraintStart_toEndOf="@id/tv_end_title"
            app:layout_constraintTop_toTopOf="@id/tv_end_title"
            tools:text="10:20" />

        <TextView
            android:id="@+id/tv_fee_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/icon_sub_money"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/market_price"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_title" />

        <EditText
            android:id="@+id/tv_fee"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_bg_white"
            android:gravity="center_vertical"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_fee_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tv_fee_title"
            app:layout_constraintTop_toTopOf="@id/tv_fee_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="1000" />

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="@id/tv_start_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_start_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>