<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/round_bg_main"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_bg_white"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/market_icon_size"
                android:layout_height="@dimen/market_icon_size"
                android:background="@drawable/icon_back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:letterSpacing="0.4"
            android:maxLines="1"
            android:text="@string/add_item"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ll_back"
            app:layout_constraintEnd_toStartOf="@id/ll_add"
            app:layout_constraintStart_toEndOf="@id/ll_back"
            app:layout_constraintTop_toTopOf="@id/ll_back" />

        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circle_bg_white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/icon_done" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_add_photo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/circle_bg_main_border_white"
        android:gravity="center"
        android:orientation="vertical"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@id/mc_image"
        app:layout_constraintEnd_toEndOf="@id/mc_image">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/icon_add_photo" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mc_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_top"
        app:shapeAppearanceOverlay="@style/circle">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </com.google.android.material.card.MaterialCardView>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:hint="@string/item_name"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mc_image"
        app:layout_constraintTop_toTopOf="@id/mc_image" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:hint="@string/item_price"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/mc_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mc_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_options"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mc_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
